# rustrain

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: gpu-verify.yml
configs/: debug.toml  deepseek_moe_toy.toml  deepseek_v3_2_session_single.toml  deepseek_v3_ep1_test.toml  deepseek_v3_ep2.toml  deepseek_v3_lora_sft.toml  deepseek_v3_session_single.toml  deepseek_v3_tp1_test.toml  deepseek_v3_tp2.toml  deepseek_v4_flash_ep1.toml  deepseek_v4_flash_ep2.toml  deepseek_v4_flash_ep2_train.toml  deepseek_v4_flash_ep8.toml  deepseek_v4_flash_lora_sft.toml  deepseek_v4_flash_lora_sft_ep8.toml  deepseek_v4_flash_session.toml  deepseek_v4_flash_tp1.toml  deepseek_v4_flash_tp2.toml  deepseek_v4_flash_tp2_ep4_train.toml  deepseek_v4_flash_tp2_train.toml  deepseek_v4_flash_tp8.toml  gsm8k_toy.toml  qwen3_30b_moe_session_single.toml  qwen3_8b_session_single.toml  qwen3_lora_sft.toml  qwen3_mini.toml  qwen3_session_single.toml  qwen_lora_sft.toml  qwen_lora_sft_bf16.toml  qwen_lora_sft_eval_paths.toml  qwen_lora_sft_max_samples.toml  qwen_lora_sft_no_shuffle.toml  qwen_session_dp2.toml  qwen_session_dp2_bf16.toml  qwen_session_dp2_layers01.toml  qwen_session_dp2_layers01_bf16.toml  qwen_session_dp2_layers01_sft.toml  qwen_session_dp2_layers01_sft_bf16.toml  qwen_session_dp2_layers03.toml  qwen_session_dp2_layers03_bf16.toml  (+36 more)
crates/rustrain-checkpoint/: Cargo.toml
crates/rustrain-checkpoint/src/: io.rs  lib.rs  manifest.rs  safetensors.rs
crates/rustrain-core/: Cargo.toml
crates/rustrain-core/src/: backend.rs  lib.rs  runtime.rs
crates/rustrain-data/: Cargo.toml
crates/rustrain-data/src/: text_data.rs
crates/rustrain-deepseek/: Cargo.toml
crates/rustrain-deepseek-v4/: Cargo.toml  build.rs
crates/rustrain-deepseek-v4/kernels/: fp8_gemm.cpp
crates/rustrain-deepseek-v4/src/: deepseek_v4_module.rs  ep.rs  fp8_kernel.rs  generate.rs  hc.rs  lib.rs  lora.rs  model.rs  session.rs  session_ep.rs  sft.rs  tp.rs
crates/rustrain-deepseek/src/: deepseek_module.rs  ep.rs  generate.rs  lib.rs  lora.rs  model.rs  session.rs  sft.rs  tp.rs
crates/rustrain-moe/: Cargo.toml
crates/rustrain-moe/src/: distributed_smoke.rs  ep_rank.rs  lib.rs  moe.rs  tch_moe.rs
crates/rustrain-nccl/: Cargo.toml
crates/rustrain-nccl/src/: lib.rs  nccl.rs  nccl_smoke.rs
crates/rustrain-parallel/: Cargo.toml
crates/rustrain-parallel/src/: dp_rank.rs  dp_tp_smoke.rs  launcher.rs  lib.rs  parallel.rs  parallel_modules.rs
crates/rustrain-qwen/: Cargo.toml
crates/rustrain-qwen/src/: generate.rs  lib.rs  lora.rs  model.rs  parity.rs  qwen_module.rs  qwen_parity.rs  rank.rs  rank_smoke.rs  session.rs  sft.rs
crates/rustrain-qwen3/: Cargo.toml
crates/rustrain-qwen3/src/: generate.rs  lib.rs  lora.rs  model.rs  qwen3_module.rs  rank.rs  session.rs  sft.rs
crates/rustrain-tch-tiny/: Cargo.toml
crates/rustrain-tch-tiny/src/: lib.rs  tch_train.rs
crates/rustrain-toy/: Cargo.toml
crates/rustrain-toy/src/: lib.rs  lora.rs  toy_model.rs  trainer.rs
crates/rustrain-train/: Cargo.toml
crates/rustrain-train/src/: clip.rs  lib.rs  lr.rs
data/debug_corpus/: tiny.txt
data/gsm8k_toy/: gsm8k_toy.txt
data/parity/: qwen2_5_0_5b_generate_summary.json  qwen2_5_0_5b_logits_summary.json  qwen_layer0_mlp_parity_summary.json  qwen_layer0_mlp_summary.json  qwen_layer0_modules_parity_summary.json  qwen_layer0_modules_summary.json  qwen_prompt.txt
data/sft/: deepseek_test.jsonl
data/sft_toy/: eval_instructions.jsonl  instructions.jsonl  more_instructions.jsonl
docs/: README.md  checkpoints.md  ray-gpu-env-injection.md
docs/plans/: deepseek-v3-support.md  deepseek-v4-support.md  qwen3-support.md
scripts/: convert_fp8_to_bf16.py  export_gsm8k_text.py  export_instruction_arrow_jsonl.py  gpu_run.sh  gpu_run_ssh.sh  qwen_verify_utils.py  require_gpu_worker.sh  tch_a800_env.sh  tch_env.sh  test_cuda.py  verify_cpu.sh  verify_ep_nccl_worker.sh  verify_ep_rank_local_worker.sh  verify_ep_sparse_worker.sh  verify_ep_tch_moe_worker.sh  verify_gpu.sh  verify_gpu_distributed.sh  verify_gpu_distributed_ssh.sh  verify_gpu_ssh.sh  verify_launch_gpu_assignment_worker.sh  verify_moe_smoke_worker.sh  verify_qwen_full_train_smoke_worker.sh  verify_qwen_kv_cache_worker.sh  verify_qwen_lora_sft_eval_paths_worker.sh  verify_qwen_lora_sft_max_samples_worker.sh  verify_qwen_lora_sft_no_shuffle_worker.sh  verify_qwen_lora_sft_resume.sh  verify_qwen_lora_sft_trainer_index_cache_worker.sh  verify_qwen_session_dp2_layers01_worker.sh  verify_qwen_session_dp2_resume_worker.sh  verify_qwen_session_dp2_sft_arrow_eval_paths_worker.sh  verify_qwen_session_dp2_sft_arrow_hf_cache_worker.sh  verify_qwen_session_dp2_sft_arrow_hf_mixed_schema_cache_worker.sh  verify_qwen_session_dp2_sft_arrow_index_cache_worker.sh  verify_qwen_session_dp2_sft_arrow_unbounded_cache_worker.sh  verify_qwen_session_dp2_sft_arrow_worker.sh  verify_qwen_session_dp2_sft_eval_paths_worker.sh  verify_qwen_session_dp2_sft_max_samples_resume_worker.sh  verify_qwen_session_dp2_sft_max_samples_worker.sh  verify_qwen_session_dp2_trainer_index_cache_worker.sh  (+31 more)
scripts/python_reference/: qwen_generate.py  qwen_logits.py  qwen_model_path.py  qwen_module_fixture.py
scripts/ray/: gpu_run.sh  rustrain_ray_runner.py
src/: backend.rs  distributed_smoke.rs  inspect.rs  launcher.rs  lora.rs  main.rs  metrics.rs  moe.rs  nccl_smoke.rs  parallel.rs  parallel_modules.rs  qwen_module.rs  qwen_parity.rs  ray_gpu.rs  runtime.rs  tch_train.rs  text_data.rs  toy_model.rs  trainer.rs
