[package]
name = "rustrain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow = { version = "57.0.0", default-features = false, features = ["ipc"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.11.3"
safetensors = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tch = "0.20.0"
tokenizers = "0.23.1"
toml = "0.8.23"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.20.0"
