[package]
name = "rustrain"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace crates
rustrain-core = { path = "crates/rustrain-core", features = ["tch"] }
rustrain-data = { path = "crates/rustrain-data" }
rustrain-nccl = { path = "crates/rustrain-nccl" }
rustrain-parallel = { path = "crates/rustrain-parallel", features = ["nccl"] }
rustrain-train = { path = "crates/rustrain-train" }
rustrain-toy = { path = "crates/rustrain-toy" }
rustrain-tch-tiny = { path = "crates/rustrain-tch-tiny" }
rustrain-qwen = { path = "crates/rustrain-qwen" }
rustrain-qwen3 = { path = "crates/rustrain-qwen3" }
rustrain-deepseek = { path = "crates/rustrain-deepseek" }
rustrain-deepseek-v4 = { path = "crates/rustrain-deepseek-v4" }
rustrain-moe = { path = "crates/rustrain-moe" }

# Ray distributed computing (native Rust SDK) — optional, only needed for Ray mode
rayrust = { version = "0.1.0", optional = true }

# Direct dependencies (used by main.rs, inspect.rs, trainer.rs)
anyhow.workspace = true
clap.workspace = true
ndarray.workspace = true
rand.workspace = true
rand_distr.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
tch.workspace = true
toml.workspace = true
tokenizers.workspace = true
tracing.workspace = true

[features]
default = []
ray = ["dep:rayrust"]

[dev-dependencies]
tempfile.workspace = true

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.98"
arrow = { version = "57.0.0", default-features = false, features = ["ipc"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.11.3"
safetensors = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tch = "0.20.0"
tokenizers = "0.23.1"
toml = "0.8.23"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tempfile = "3.20.0"
