[package]
name = "rustrain-data"
version = "0.1.0"
edition = "2024"

[dependencies]
rustrain-core = { path = "../rustrain-core" }
anyhow.workspace = true
arrow.workspace = true
regex.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
toml.workspace = true
tracing.workspace = true
